crates/toml/tests/snapshots/invalid/table/redefine-02.stderr
TOML parse error at line 3, column 2
  |
3 | [t1.t2]
  |  ^^^^^
duplicate key
